# fontsource-downloader

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cspell.config.yml  fontsource_downloader.pyi  nurfile  pyproject.toml
.config/: cliff.toml  nextest.toml
.github/: FUNDING.yml  dependabot.yml  requirements.txt
.github/workflows/: bump-n-release.nu  bump-n-release.yml  pre-commit.yml  python.yml  rust.yml
docs/: api.rst  conf.py  index.md  logo.xcf
src/: caching.rs  client.rs  error.rs  lib.rs  query.rs  responses.rs
tests/: css.rs  download.rs  test_binding.py
tests/assets/: family_metadata.json  font_list.json
