[package]
name = "fontsource_downloader"
description = "A library to download (and cache) fonts with Fontsource REST API"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/2bndy5/fontsource-downloader"
exclude = ["cspell.config.yml", "nurfile", "**.py*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fontsource_downloader"
crate-type = ["cdylib", "lib"]

[dependencies]
directories = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
# reqwest default features includes a TLS backend, but
# as a library, we don't want to impose any TLS backend on our lib consumers.
# Instead, we just disable all default features except for the ones this lib actually needs.
# Consumers can add reqwest as a dependency with the TLS backend of their choice.
reqwest = { version = "0.13", default-features = false, features = ["charset", "http2", "system-proxy"] }
tokio = { version = "1.52.3", features = ["rt"] }

pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310"], optional = true }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"], optional = true }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros"] }
reqwest = { version = "0.13", features = ["default-tls"] }
mockito = "1.7.2"

[features]
pyo3 = ["dep:pyo3", "dep:pyo3-async-runtimes", "reqwest/default-tls"]
# pyo3-vendored-tls = ["reqwest/native-tls-vendored"]
