[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "fontsource-downloader"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license-files = ["LICENSE"]
readme = "README.md"
dynamic = ["version", "description", "license"]
dependencies = [
    "asyncio>=4.0.0",
]

[tool.maturin]
features = ["pyo3"]
exclude = ["cspell.config.yml", "nurfile", "tests/*.rs"]

[dependency-groups]
dev = [
    "maturin>=1.13.3",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
